--- a/app/src/main/res/layout/activity_account_list.xml
+++ b/app/src/main/res/layout/activity_account_list.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".account.AccountListActivity">
-
-
+    tools:context=".repolist.RepoListActivity">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
 </android.support.constraint.ConstraintLayout>
