--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="general_margin">24dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
+    <dimen name="general_padding">8dp</dimen>
 </resources>
